Finish the sample site

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@ layout: default
       <h1>CODE DANGEROUSLY</h1>
       <ul class="social-list">
         <li>
-          <a href="http://example.com/" class="social-link">Fb</a>
+          <a href="https://facebook.com/learnenough" class="social-link">
+            <span class="fa fa-facebook"></span>
+          </a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Tw</a>
+          <a href="https://twitter.com/learnenough" class="social-link">
+            <span class="fa fa-twitter"></span>
+          </a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Gh</a>
+          <a href="https:/github.com/learnenough" class="social-link">
+            <span class="fa fa-github"></span>
+          </a>
         </li>
       </ul>
     </div>
@@ -89,7 +95,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">
-          Tw
+          <span class="fa fa-twitter"></span>
         </a>
         <div class="bio-copy">
           <p>
@@ -113,7 +119,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">
-          Tw
+          <span class="fa fa-twitter"></span>
         </a>
         <div class="bio-copy">
           <p>
@@ -128,7 +134,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">
-          Tw
+          <span class="fa fa-twitter"></span>
         </a>
         <div class="bio-copy">
           <p>
